# bava

./: .SRCINFO  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  PKGBUILD  README.md  cavalier-report.md  release-plz.toml  rust-analyzer.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  dependabot-auto-merge.yml  release-plz.yml  release.yml
crates/bava/: CHANGELOG.md  Cargo.toml
crates/bava/src/: config.rs  main.rs
crates/bava/src/cava/: mod.rs
crates/bava/src/cava/capture/: coreaudio.rs  mod.rs  pipewire.rs  pulse.rs  wasapi.rs
crates/bava/src/gui/: mod.rs
crates/bava/src/mpris/: linux.rs  macos.rs  mod.rs  windows.rs
crates/bava/src/now_playing/: linux.rs  macos.rs  mod.rs  windows.rs
crates/bava/src/record/: audio.rs  encoder.rs  mod.rs
crates/bava/src/vis/: bars.rs  circle.rs  hud.rs  mod.rs  physics.rs  stroke.rs
crates/cavacore-rs/: Cargo.toml
crates/cavacore-rs/src/: lib.rs
crates/cavacore-rs/tests/: dsp.rs  validation.rs
crates/cavacore-rs/tests/common/: mod.rs
crates/cavacore-sys/: Cargo.toml  build.rs
crates/cavacore-sys/src/: lib.rs
flatpak/: README.md  cargo-sources.json  gen-cargo-sources.py  io.github.dekuraan.bava.desktop  io.github.dekuraan.bava.metainfo.xml  io.github.dekuraan.bava.yml
