[workspace]
resolver = "3"
members = [
    "crates/cavacore-rs",
    "crates/bava",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dekuraan/bava"

[workspace.dependencies]
cavacore-rs = { path = "crates/cavacore-rs" }

# Compile dependencies with optimizations even in dev builds; Bevy is unusably
# slow otherwise. Our own crates stay unoptimized for fast iteration.
[profile.dev.package."*"]
opt-level = 3

# Smaller release binaries: cross-crate inlining + dead-code elimination (LTO),
# a single codegen unit, and stripped symbols. Slower to link, much smaller out.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
