[package]
name = "bava"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Bevy music visualizer driven by cavacore, MPRIS, and spotifyd"
default-run = "bava"

[dependencies]
cavacore-rs.workspace = true
bevy = "0.18"

# 2D physics: ECS-native rigid bodies/colliders for the ball + bar simulation.
avian2d = "0.6"

# Tiny, dep-free RNG for randomizing spawned ball properties.
fastrand = "2"

# In-app settings editor (immediate-mode GUI overlay).
bevy_egui = "0.39"

# Album-art decoding (both platforms decode in-memory image bytes).
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Lock-free-ish hand-off from the audio/now-playing threads to Bevy systems.
crossbeam-channel = "0.5"

# Configuration: CLI args (clap) layered over a TOML config file.
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

# --- Linux backends: PulseAudio capture + MPRIS now-playing over D-Bus. ---
[target.'cfg(target_os = "linux")'.dependencies]
# Audio capture (PulseAudio simple API, works through pipewire-pulse).
libpulse-binding = "2"
libpulse-simple-binding = "2"
# Now-playing metadata + album art over MPRIS / D-Bus.
mpris = "2"
# HTTP fetch for remote album art (e.g. spotifyd's http artUrl).
ureq = "2"

# --- Windows backends: WASAPI loopback capture + GSMTC now-playing. ---
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Foundation",
    "Media_Control",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
