[package]
name = "bava"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Bevy music visualizer driven by cavacore, MPRIS, and spotifyd"
default-run = "bava"

[dependencies]
cavacore-rs.workspace = true

# Bevy, tree-shaken to what a 2D visualizer actually touches. Default features
# pull in all of 3D (PBR/glTF/lighting/meshlets/anti-alias), the audio decoder
# stack, scene loading, and the picking backends — none of which we use. We opt
# into just the 2D + UI render pipelines (which transitively give the app/asset/
# window/text layers and HDR+bloom), windowing on Wayland/X11, and keyboard/mouse
# input. Adds back: 3D, `audio`, `scene`, `picking`, gamepad, sysinfo — if needed.
bevy = { version = "0.18", default-features = false, features = [
    "2d_bevy_render",  # sprite + core pipeline + post-process (bloom) + gizmos (avian F3 debug)
    "ui_bevy_render",  # bevy_ui for the HUD; transitively pulls default_app (asset/window/state/input_focus)
    "tonemapping_luts", # LUTs for the AgX / TonyMcMapface / BlenderFilmic tone mappers (see [vis] tonemapping)
    "std",
    "multi_threaded",
    "bevy_winit",
    "wayland",
    "x11",
    "default_font",    # embedded font so HUD text renders without shipping one
    "keyboard",        # Space / F3 / configurable GUI toggle
    "mouse",           # egui editor interaction
] }

# 2D physics: ECS-native rigid bodies/colliders for the ball + bar simulation.
# Drop avian's default `bevy_scene` + `bevy_picking` (unused) and `xpbd_joints`
# (no joints); keep `debug-plugin` for the F3 collider gizmos.
avian2d = { version = "0.6", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "parallel",
    "debug-plugin",
] }

# Tiny, dep-free RNG for randomizing spawned ball properties.
fastrand = "2"

# In-app settings editor (immediate-mode GUI overlay). Drop egui's default
# `picking` (we have no bevy_picking backend) and `open_url` (no hyperlinks).
bevy_egui = { version = "0.39", default-features = false, features = [
    "render",
    "bevy_ui",
    "default_fonts",
    "manage_clipboard",
] }

# Album-art decoding (both platforms decode in-memory image bytes).
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Lock-free-ish hand-off from the audio/now-playing threads to Bevy systems.
crossbeam-channel = "0.5"

# Configuration: CLI args (clap) layered over a TOML config file.
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"

# --- Linux backends: PulseAudio capture + MPRIS now-playing over D-Bus. ---
[target.'cfg(target_os = "linux")'.dependencies]
# Audio capture (PulseAudio simple API, works through pipewire-pulse).
libpulse-binding = "2"
libpulse-simple-binding = "2"
# Now-playing metadata + album art over MPRIS / D-Bus.
mpris = "2"
# HTTP fetch for remote album art (e.g. spotifyd's http artUrl).
ureq = "2"

# --- Windows backends: WASAPI loopback capture + GSMTC now-playing. ---
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Foundation",
    "Media_Control",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
