[package]
name = "cavacore-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust wrapper around cavacore, the audio-visualization engine from CAVA"

[dependencies]
cavacore-sys.workspace = true

[dev-dependencies]
# deterministic test signal generation only
