[package]
name = "cavacore-rs"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust port of cavacore, the audio-visualization engine from CAVA"

[dependencies]
# Pure-Rust real-to-complex FFT (rustfft under the hood). Unnormalized, matching
# the FFTW `dft_r2c_1d` scale the original cavacore eq constants were tuned to.
realfft = "3"

[dev-dependencies]
# deterministic test signal generation only
